--- a/senai-gpt-web-angular/src/app/user-module/new-user-screen/new-user-screen.html
+++ b/senai-gpt-web-angular/src/app/user-module/new-user-screen/new-user-screen.html
@@ -17,7 +17,7 @@
 
     <button class="btn" (click)="onNewUserClick()">Entrar</button>
 
-    <a class="form-hint" routerLink="/login">Clique aqui para fazer o login</a>
+    <a class="form-hint" href="/login">Clique aqui para fazer o login</a>
 
   </div>
 
