--- a/senai-gpt-web-angular/src/app/chat-module/chat-screen/chat-screen.css
+++ b/senai-gpt-web-angular/src/app/chat-module/chat-screen/chat-screen.css
@@ -75,6 +75,7 @@
   align-items: center;
   padding: 20px;
   height: 70vh;
+  overflow: auto;
 
 }
 
@@ -167,6 +168,7 @@
 
 .chat-container {
 
+  margin-bottom: 40px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -274,6 +276,12 @@
 ::ng-deep body.dark-mode .input-container-1 {
 
   background-color: #282828 !important;
+
+}
+
+::ng-deep body.dark-mode .chat-container .message-item.chatbot {
+
+  background-color: #191919 !important;
 
 }
 
